--- a/horizontal.css
+++ b/horizontal.css
@@ -1,5 +1,7 @@
 /**** Google Font ***/
 
+/*** CSS file assumes normalize.css is being used ***/
+
 @import url(http://fonts.googleapis.com/css?family=Sansita+One);
 
 /* apply a natural box layout model to all elements */
